--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
   <div class="header-1">
 
-    <a href="#" class="logo"> <i class="fas fa-shopping-bag"></i> Produtos </a>
+    <!-- <a href="#" class="logo"> <i class="fas fa-shopping-bag"></i> Produtos </a> -->
+    <a href="#" class="logo"><img src="assets/images/ico-andre.ico" alt="logo"> Avalone </a>
+
 
     <div class="form-container">
 
@@ -43,10 +45,10 @@
     <nav class="navbar">
       <ul>
         <li><a class="active" href="#home"> Casa </a></li>
-        <li><a href="#arrival"> Chegada </a></li>
-        <li><a href="#featured"> Apresentou </a></li>
-        <li><a href="#galery"> Galeria </a></li>
-        <li><a href="#deal"> Á parte </a></li>
+        <li><a href="#arrival"> Saúde </a></li>
+        <li><a href="#featured"> Beleza </a></li>
+        <li><a href="#galery"> Mamãe e bebê </a></li>
+        <li><a href="#deal"> Contato </a></li>
       </ul>
     </nav>
 
