auterando pra scss

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
   <link rel="shortcut icon" href="assets/images/ico-andre.ico" type="image/x-icon">
 
   <!-- custom css file link / arquivo css personalizado -->
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/style.css">
 
   <!-- font awesome cdn link / fonte incrível link cdn -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-
+  <link rel="stylesheet" href="fonts/font-awesome.css">
+    <link rel="stylesheet" href="fonts/google-fonts.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.green.min.css">
 
 </head>
 <body>
