--- a/index.html
+++ b/index.html
@@ -22,52 +22,48 @@
 <body>
   
 <!-- header section starts / cabeçalho começa -->
+<header id="header" class="fixed-top">
 
-<header>
-
-  <div class="header-1">
-
-    <!-- <a href="#" class="logo"> <i class="fas fa-shopping-bag"></i> Produtos </a> -->
-    <a href="#" class="logo"><img src="assets/images/ico-andre.ico" alt="logo"> Avalone </a>
-
-
-    <div class="form-container">
-
-      <form action="">
-        <input type="search" placeholder="procurar produtos" id="search">
-        <label for="search" class="fas fa-search"></label>
-      </form>
-
+  <div class="fas fa-bars"></div>
+  
+  <a href="#" class="logo"> <img src="assets/images/ico-andre.ico" alt=""><h1>Avalone</h1></a>
+  
+  
+  <div class="left">
+  
+    <div class="search-container">
+      <label for="search" class="fas fa-search"></label>
+      <input type="search" placeholder="search" id="search">
     </div>
-
+  
+    <div class="fas fa-shopping-cart"></div>
+  
   </div>
-
-  <div class="header-2">
-
-    <div id="menu" class="fas fa-bars"></div>
-
-    <nav class="navbar">
-      <ul>
-        <li><a class="active" href="#home"> Casa </a></li>
-        <li><a href="#arrival"> Saúde </a></li>
-        <li><a href="#featured"> Beleza </a></li>
-        <li><a href="#galery"> Mamãe e bebê </a></li>
-        <li><a href="#deal"> Contato </a></li>
-      </ul>
-    </nav>
-
-    <div class="icons">
-      <a href="#" class="fas fa-heart"></a>
-      <a href="#" class="fas fa-shopping-cart"></a>
-      <a href="#" class="fas fa-user"></a>
-
-    </div>
-
-  </div>
-
-</header>
+  
+  <!-- navbar  -->
+  
+  <nav class="navbar">
+    <ul>
+      <li><a href="#home">Inicio</a></li>
+      <li><a href="#product">Produtos</a></li>
+      <li><a href="#review">testemunhos</a></li>
+      <li><a href="#offer">Ofertas</a></li>
+      <li><a href="#newsletter">newsletter</a></li>
+    </ul>
+  </nav>
+  
+  </header>
 
 <!-- header section ends / cabeçalho termina -->
+
+<!-- home section starts / inicio seção  -->
+
+<section id="home">
+  
+</section>
+
+<!-- home section ends / inicio seção termina -->
+
 
 
 
