--- a/index.html
+++ b/index.html
@@ -53,13 +53,30 @@
   </nav>
   
   </header>
-
 <!-- header section ends / cabeçalho termina -->
 
 <!-- home section starts / inicio seção  -->
 
 <section id="home">
-  
+  <div class="slide">
+    <div class="content text-center text-md-left pl-md-5 ml-md-5">
+      <h1> Farmacia </h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil corrupti perspiciatis fugiat voluptates itaque</p>
+      <div class="stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star-half-alt"></i>
+      </div>
+      <h3 class="price"> R$ 0,00 </h3>
+      <a href="#"><button> adicionar ao carrinho <i class="fas fa-shopping-cart"></i> </button></a>
+    </div>
+
+    <div class="image">
+      <img src="assets/images/farmacia-1.jpg" alt="">
+    </div>
+  </div>
 </section>
 
 <!-- home section ends / inicio seção termina -->
