section home end

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   <link rel="stylesheet" href="fonts/font-awesome.css">
     <link rel="stylesheet" href="fonts/google-fonts.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.green.min.css">
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/owl.carousel.min.css">
+    <link rel="stylesheet" href="styles/owl.theme.green.min.css">
 
 </head>
 <body>
@@ -57,11 +57,11 @@
 
 <!-- home section starts / inicio seção  -->
 
-<section id="home">
-  <div class="slide">
+<section id="home" class="owl-carousel owl-theme home-slider">
+  <div class="slide item">
     <div class="content text-center text-md-left pl-md-5 ml-md-5">
-      <h1> Farmacia </h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil corrupti perspiciatis fugiat voluptates itaque</p>
+      <h1> Lenço umedecido Babysec </h1>
+      <p>Lenços Umedecidos Babysec Limpeza Delicada com 48 Unidades</p>
       <div class="stars">
         <i class="fas fa-star"></i>
         <i class="fas fa-star"></i>
@@ -69,14 +69,75 @@
         <i class="fas fa-star"></i>
         <i class="fas fa-star-half-alt"></i>
       </div>
-      <h3 class="price"> R$ 0,00 </h3>
+      <h3 class="price"> R$ 16,99 </h3>
       <a href="#"><button> adicionar ao carrinho <i class="fas fa-shopping-cart"></i> </button></a>
     </div>
 
     <div class="image">
-      <img src="assets/images/farmacia-1.jpg" alt="">
+      <img src="assets/images/lenço.png" alt="lenço">
     </div>
   </div>
+
+  <div class="slide item">
+    <div class="content text-center text-md-left pl-md-5 ml-md-5">
+      <h1> Fralda Huggies </h1>
+      <p>Fralda Roupinha Huggies Supreme Care Tamanho XXG com 48 unidades</p>
+      <div class="stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star-half-alt"></i>
+      </div>
+      <h3 class="price"> R$ 69,99 </h3>
+      <a href="#"><button> adicionar ao carrinho <i class="fas fa-shopping-cart"></i> </button></a>
+    </div>
+
+    <div class="image">
+      <img src="assets/images/fralda.png" alt="lenço">
+    </div>
+  </div>
+
+  <div class="slide item">
+    <div class="content text-center text-md-left pl-md-5 ml-md-5">
+      <h1> Creme para Assaduras </h1>
+      <p>Creme para Assaduras Mustela 123 110g</p>
+      <div class="stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star-half-alt"></i>
+      </div>
+      <h3 class="price"> R$ 49,99 </h3>
+      <a href="#"><button> adicionar ao carrinho <i class="fas fa-shopping-cart"></i> </button></a>
+    </div>
+
+    <div class="image">
+      <img src="assets/images/creme de assadura.png" alt="lenço">
+    </div>
+  </div>
+
+  <div class="slide item">
+    <div class="content text-center text-md-left pl-md-5 ml-md-5">
+      <h1> Composto Milnutri </h1>
+      <p>Composto Lácteo Milnutri Premium Danone até 5 anos 800g</p>
+      <div class="stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star-half-alt"></i>
+      </div>
+      <h3 class="price"> R$ 48,50 </h3>
+      <a href="#"><button> adicionar ao carrinho <i class="fas fa-shopping-cart"></i> </button></a>
+    </div>
+
+    <div class="image">
+      <img src="assets/images/milnutri.png" alt="lenço">
+    </div>
+  </div>
+
 </section>
 
 <!-- home section ends / inicio seção termina -->
@@ -107,6 +168,8 @@
 
 <!-- jquery cdn link / link cdn jquery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<script src="src/owl.carousel.min.js"></script>
 
 <!-- custom js file / arquivo js customizado -->
   <script src="src/script.js"></script>
