--- a/index.html
+++ b/index.html
@@ -604,8 +604,8 @@
     </div>
   </div>
 
-  <!-- children's sale / venda infantil -->
-
+  
+  <!-- children sale / venda infantil -->
   <div class="product-container">
     <h2 class="title"> Infantil </h2>
     <div class="product-slider owl-carousel owl-theme">
@@ -854,7 +854,7 @@
 
     </div>
   </div>
-
+  <!-- baby and mother sale / venda mamãe e bebê -->
   <div class="product-container">
     <h2 class="title"> Mamãe e bebê </h2>
     <div class="product-slider owl-carousel owl-theme">
@@ -1103,11 +1103,11 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half-alt"></i>
           </div>
-          <div class="price">R$ 25,99 </div>
+          <div class="price">R$ 5,09 </div>
         </div>
           <div class="info">
-          <h4>O Algodão Quadrado Ever Care Baby 100 Unidades
-            <p> foi especialmente desenvolvido para o cuidado com o seu bebe! Ideal para higiene do recém-nascido e do bebe, o Algodão Quadrado é hipoalergênico, macio, absorvente e cabe na palma da mão, facilitando assim a sua utilização.</p>
+          <h4> Hastes Flexíveis Cotonetes 75 Unidades </h4>
+            <p> Cotonetes é feito com algodão 100% puro e possui hastes plásticas flexíveis; por isso oferece toda a suavidade, conforto e absorção para o cuidado da sua pele; cotonetes é indicado para a higiene pessoal de toda a família; pode ser usado para limpar delicadamente a parte externa da orelha (desde que não atinja o canal do ouvido), as dobrinhas do pescoço e pernas do bebê, além de ser recomendado para aplicar e remover maquiagem. Feito com algodão 100% puro; hastes plásticas flexíveis. Oferece toda a suavidade, conforto e absorção para o cuidado da sua pele. Indicado para a higiene pessoal de toda a família.</p>
             <a href="#"><button>adicionar ao carrinho</button></a>
             <div class="share">
               <a href="#" class="fab fa-facebook-f"></a>
@@ -1122,10 +1122,10 @@
       <div class="product-card item">
 
         <div class="image">
-          <img src="assets/images/baby-2.png" alt="">
+          <img src="assets/images/beauty-2.png" alt="">
         </div>
         <div class="content">
-          <h3>  Lenços Umedecidos Pampers Aroma de Aloe Vera 192 Unidade </h3>
+          <h3>  Desodorante Aerosol Dove Original 150ml </h3>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -1133,12 +1133,12 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half-alt"></i>
           </div>
-          <div class="price">R$ 30,29 </div>
+          <div class="price">R$ 16,90 </div>
         </div>
 
         <div class="info">
-          <h4> Lenços Umedecidos Pampers Aroma de Aloe Vera 192 Unidade </h4>
-          <p>Conheça as toalhinhas umedecidas Pampers, agora com novos aromas! Elas são ideais para limpar seu bebê da cabeça aos pés. São feitas de um material resistente para evitar que se rasguem quando retiradas do pacotinho ou quando estiver limpando seu bebê.  • Limpeza completa da cabeça aos pés • Também para uso de mãos e rostos*. *Não use dentro dos olhos • Suaves e resistentes • Sem álcool*. *álcool etílico •</p>
+          <h4> Desodorante Aerosol Dove Original 150ml </h4>
+          <p>O Desodorante Aerosol Dove Original 150ml é o único que cuida da delicada pele das suas axilas, ajudando na recuperação depois da depilação e deixando sua pele visivelmente mais macia e hidratada. Além de proteger 48 horas, possui ¼ de creme hidratante e agora o dobro de vitamina E, além do cheirinho insubstituível de Dove. Só o antitranspirante preferido do Brasil pode garantir axilas mais lindas em apenas 7 dias. Como Usar: Para uma melhor sensação de frescor, o jeito mais fácil de tirar o máximo proveito do seu aerosol é agitar bem, garantindo que todos os ingredientes se misturem corretamente. Para cobrir uma área mais homogênea, aplique o produto a uma distância de 15cm das axilas. Aperte a válvula por cerca de dois segundos para cada axila.</p>
             <a href="#"><button>adicionar ao carrinho</button></a>
             <div class="share">
               <a href="#" class="fab fa-facebook-f"></a>
@@ -1152,10 +1152,10 @@
       <div class="product-card item">
 
         <div class="image">
-          <img src="assets/images/baby-3.png" alt="">
+          <img src="assets/images/beauty-3.png" alt="">
         </div>
         <div class="content">
-          <h3> Mamadeira Pétala Avent Transparente 125ml </h3>
+          <h3> Absorvente Always Super Proteção Suave com Abas 32 Unidades </h3>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -1163,13 +1163,13 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half-alt"></i>
           </div>
-          <div class="price">R$ 54,35 </div>
+          <div class="price">R$ 14,99 </div>
 
         </div>
 
         <div class="info">
           <h4>Mamadeira Pétala Avent Transparente 125ml</h4>
-          <p>Mamadeira Pétala Avent Transparente 125ml</p>
+          <p> Sinta-se limpa e confortável com o novo “Always Super Proteção” com formato anatômico, desenhado para a mulher brasileira, que se adapta ao seu corpo e calcinha, mantendo a umidade longe da sua pele.  </p>
             <a href="#"><button>adicionar ao carrinho</button></a>
             <div class="share">
               <a href="#" class="fab fa-facebook-f"></a>
@@ -1183,10 +1183,10 @@
       <div class="product-card item">
 
         <div class="image">
-          <img src="assets/images/baby-4.png" alt="">
+          <img src="assets/images/beauty-4.png" alt="">
         </div>
         <div class="content">
-          <h3> Leite em Pó Ninho Zero Lactose 700g </h3>
+          <h3> Kit Sabonete Líquido Íntimo Dermacyd Delicata 200ml + 100ml </h3>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -1194,19 +1194,13 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half-alt"></i>
           </div>
-          <div class="price">R$ 29,99 </div>
+          <div class="price">R$ 19,99 </div>
 
         </div>
 
         <div class="info">
-          <h4>Leite em Pó Ninho Zero Lactose 700g</h4>
-          <p>NINHO® Forti+ Zero Lactose traz a fortificação exclusiva do mix Forti+, rico em cálcio, ferro, zinco, vitaminas A, D, C e E. Toda a nutrição de NINHO para crianças com intolerância à lactose.
-            • 0% Lactose
-            • Rico em cálcio, ferro
-            • Rico em Vitaminas A, D, C e E
-            • Não contém glúten
-            • Lata 700g
-            NÃO CONTÉM GLÚTEN.</p>
+          <h4>Kit Sabonete Líquido Íntimo Dermacyd Delicata 200ml + 100ml</h4>
+          <p> Dermacyd Delicata é um sabonete líquido íntimo especialmente formulado para a higiene diária da mulher. O exclusivo complexo ácido lático - atomizado de lactoserum - proporciona higiene completa, conforto e bem-estar. O sabonete líquido íntimo Dermacyd® Delicata cuida naturalmente da mulher, proporcionando diariamente agradável sensação de limpeza, com segurança e prolongado tempo de ação de higiene. </p>
             <a href="#"><button>adicionar ao carrinho</button></a>
             <div class="share">
               <a href="#" class="fab fa-facebook-f"></a>
@@ -1220,10 +1214,10 @@
       <div class="product-card item">
 
         <div class="image">
-          <img src="assets/images/baby-5.png" alt="">
+          <img src="assets/images/beauty-5.png" alt="">
         </div>
         <div class="content">
-          <h3> Absorvente Para Seios Ever Care 30 Unidades </h3>
+          <h3> Sabonete em Barra Dove Original 90g </h3>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -1231,13 +1225,13 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star-half-alt"></i>
           </div>
-          <div class="price">R$ 15,79 </div>
+          <div class="price">R$ 4,49 </div>
 
         </div>
 
         <div class="info">
-          <h4>Absorvente Para Seios Ever Care 30 Unidades</h4>
-          <p>O Absorvente Para Seios Ever Care 30 Unidades possui formato anatômico que se ajusta ao seio, canais antivazamentos que facilitam a distribuição homogênea dos líquidos e a sua face externa é impermeável , evitando assim vazamentos que mancham o sutiã e a roupa! Além de tudo isso, o absorvente para seios tem a face interna feita de material suave e permeável que apoia e não machuca o seio. </p>
+          <h4> Sabonete em Barra Dove Original 90g </h4>
+          <p> O Sabonete em Barra Dove Original 90g oferece ph neutro e ¼ de creme hidratante, respeitando a composição natural da pele através de sua fórmula, garantindo um banho sem agressões. O seu creme hidratante é extremamente eficaz, penetrando de forma profunda na pele, fazendo assim, com que o corpo perca menos água. Com agentes de limpeza suaves que garantem uma hidratação natural da pele, não resseca e deixa a pele limpa, macia e bem cuidada. Ideal para uso diário, remove a sujeira do dia a dia, sem prejudicar ou causar irritações. </p>
             <a href="#"><button>adicionar ao carrinho</button></a>
             <div class="share">
               <a href="#" class="fab fa-facebook-f"></a>
@@ -1251,10 +1245,10 @@
       <div class="product-card item">
 
         <div class="image">
-          <img src="assets/images/baby-6.png" alt="">
+          <img src="assets/images/beauty-6.png" alt="">
         </div>
         <div class="content">
-          <h3> Sabonete Líquido Granado Bebê Tradicional 500ml </h3>
+          <h3> Hidratante Facial em Gel Nivea com Ácido Hialurônico e Pepino 100g </h3>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -1267,8 +1261,14 @@
         </div>
 
         <div class="info">
-          <h4>Sabonete Líquido Granado Bebê Tradicional 500ml</h4>
-          <p>Sabonete Líquido Granado Bebê Tradicional 500ml</p>
+          <h4>Hidratante Facial em Gel Nivea com Ácido Hialurônico e Pepino 100g</h4>
+          <p>O que é?
+            Hidratante em gel com ácido hialurônico e pepino. Textura mais leve que o creme facial. Não obstrui os poros e hidrata por 24h. Cuide bem da sua pele!
+            Benefícios e diferenciais
+            - Livre de oleosidade
+            - Com ácido hialurônico e pepino
+            - Refresca e hidrata a pele do rosto
+            Uma unidade de embalagem contém 100g</p>
             <a href="#"><button>adicionar ao carrinho</button></a>
             <div class="share">
               <a href="#" class="fab fa-facebook-f"></a>
@@ -1282,10 +1282,10 @@
       <div class="product-card item">
 
         <div class="image">
-          <img src="assets/images/baby-7.png" alt="">
+          <img src="assets/images/beauty-7.png" alt="">
         </div>
         <div class="content">
-          <h3> Repelente Off! Kids Johnson 200ml </h3>
+          <h3> Refil Para Barbear Gillette Mach3 4 Unidades </h3>
           <div class="stars">
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
@@ -1298,8 +1298,8 @@
         </div>
 
         <div class="info">
-          <h4>Repelente Off! Kids Johnson 200ml</h4>
-          <p>O Repelente Off! Kids Johnson 200ml foi pensado especialmente para ampliar a sensação de liberdade da criançada. Tem textura suave, formulação exclusiva para a pele sensível das crianças, dermatologicamente testada, não é oleosa e tem cheirinho suave e agradável. Off! Kids é garantia de proteção contra picadas de mosquitos e pernilongos e ainda previne contra alergias causadas pelas picadas dos insetos e possíveis doenças que eles possam transmitir. Recomenda-se aplicar Off! Kids sobre as parte expostas do corpo e massagear a área até que o produto desapareça.</p>
+          <h4>Refil Para Barbear Gillette Mach3 4 Unidades</h4>
+          <p>Os refis do aparelho de barbear Gillette Mach3 tem três lâminas mais resistentes que o aço e se mantêm afiadas por mais tempo (vs. Prestobarba3). Ele é criado para dar a você até 20 barbas por recarga e sua fita lubrificante muda de cor quando o barbear não é mais ótimo, indicando que é hora de substituir a carga por uma nova. A sua cabeça móvel, que sé adapta ao contorno da sua pele, e os seus 10 micro.</p>
             <a href="#"><button>adicionar ao carrinho</button></a>
             <div class="share">
               <a href="#" class="fab fa-facebook-f"></a>
@@ -1316,8 +1316,11 @@
   
 
 </section>
-
 <!-- product section ends / seção de produto termina -->
+
+<!-- section review starts seções de revisão começam -->
+<!-- section review ends / seções de revisão termina -->
+
 
 
 
