--- a/index.html
+++ b/index.html
@@ -1319,6 +1319,48 @@
 <!-- product section ends / seção de produto termina -->
 
 <!-- section review starts seções de revisão começam -->
+<div id="review">
+
+  <div class="heading"> opiniões de nossos clientes </div>
+
+  <div class="box-cantainer">
+    <div class="review-slider">
+
+      <div class="box">
+        <div class="comment">
+          <p><i class="fas fa-quote-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex illum, modi saepe dolores similique, asperiores dicta voluptate molestias eligendi quisquam perferendis hic dolore debitis sapiente laudantium beatae quaerat at quae!</i></p>
+          <h3> Rodrigo Cavalcanti </h3>
+          <div class="image"><img src="assets/images/client.jpg" alt=""></div>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="comment">
+          <p><i class="fas fa-quote-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex illum, modi saepe dolores similique, asperiores dicta voluptate molestias eligendi quisquam perferendis hic dolore debitis sapiente laudantium beatae quaerat at quae!</i></p>
+          <h3> Ana Regina </h3>
+          <div class="image"><img src="assets/images/client-1.jpg" alt=""></div>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="comment">
+          <p><i class="fas fa-quote-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex illum, modi saepe dolores similique, asperiores dicta voluptate molestias eligendi quisquam perferendis hic dolore debitis sapiente laudantium beatae quaerat at quae!</i></p>
+          <h3> Sthefanni Galvão </h3>
+          <div class="image"><img src="assets/images/client-2.jpg" alt=""></div>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="comment">
+          <p><i class="fas fa-quote-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex illum, modi saepe dolores similique, asperiores dicta voluptate molestias eligendi quisquam perferendis hic dolore debitis sapiente laudantium beatae quaerat at quae!</i></p>
+          <h3> Jorge Cariatti </h3>
+          <div class="image"><img src="assets/images/client-3.jpg" alt=""></div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
 <!-- section review ends / seções de revisão termina -->
 
 
