--- a/index.html
+++ b/index.html
@@ -1319,7 +1319,7 @@
 <!-- product section ends / seção de produto termina -->
 
 <!-- section review starts seções de revisão começam -->
-<div id="review">
+<section id="review">
 
   <div class="heading"> opiniões de nossos clientes </div>
 
@@ -1328,7 +1328,7 @@
 
       <div class="box">
         <div class="comment">
-          <p><i class="fas fa-quote-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex illum, modi saepe dolores similique, asperiores dicta voluptate molestias eligendi quisquam perferendis hic dolore debitis sapiente laudantium beatae quaerat at quae!</i></p>
+          <i><i class="fas fa-quote-left"></i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex illum, modi saepe dolores similique, asperiores dicta voluptate molestias eligendi quisquam perferendis hic dolore debitis sapiente laudantium beatae quaerat at quae!<i class="fas fa-quote-right"></i></p>
           <h3> Rodrigo Cavalcanti </h3>
           <div class="image"><img src="assets/images/client.jpg" alt=""></div>
         </div>
@@ -1336,7 +1336,7 @@
 
       <div class="box">
         <div class="comment">
-          <p><i class="fas fa-quote-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex illum, modi saepe dolores similique, asperiores dicta voluptate molestias eligendi quisquam perferendis hic dolore debitis sapiente laudantium beatae quaerat at quae!</i></p>
+          <p><i class="fas fa-quote-left"></i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex illum, modi saepe dolores similique, asperiores dicta voluptate molestias eligendi quisquam perferendis hic dolore debitis sapiente laudantium beatae quaerat at quae!<i class="fas fa-quote-right"></i></p>
           <h3> Ana Regina </h3>
           <div class="image"><img src="assets/images/client-1.jpg" alt=""></div>
         </div>
@@ -1344,7 +1344,7 @@
 
       <div class="box">
         <div class="comment">
-          <p><i class="fas fa-quote-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex illum, modi saepe dolores similique, asperiores dicta voluptate molestias eligendi quisquam perferendis hic dolore debitis sapiente laudantium beatae quaerat at quae!</i></p>
+          <p><i class="fas fa-quote-left"></i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex illum, modi saepe dolores similique, asperiores dicta voluptate molestias eligendi quisquam perferendis hic dolore debitis sapiente laudantium beatae quaerat at quae!<i class="fas fa-quote-right"></i></p>
           <h3> Sthefanni Galvão </h3>
           <div class="image"><img src="assets/images/client-2.jpg" alt=""></div>
         </div>
@@ -1352,7 +1352,7 @@
 
       <div class="box">
         <div class="comment">
-          <p><i class="fas fa-quote-left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex illum, modi saepe dolores similique, asperiores dicta voluptate molestias eligendi quisquam perferendis hic dolore debitis sapiente laudantium beatae quaerat at quae!</i></p>
+          <p><i class="fas fa-quote-left"></i>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex illum, modi saepe dolores similique, asperiores dicta voluptate molestias eligendi quisquam perferendis hic dolore debitis sapiente laudantium beatae quaerat at quae!<i class="fas fa-quote-right"></i></p>
           <h3> Jorge Cariatti </h3>
           <div class="image"><img src="assets/images/client-3.jpg" alt=""></div>
         </div>
@@ -1360,7 +1360,7 @@
 
     </div>
   </div>
-</div>
+</section>
 <!-- section review ends / seções de revisão termina -->
 
 
