updates and header increment

--- a/index.html
+++ b/index.html
@@ -1325,7 +1325,7 @@
 
   <div class="heading"> opiniões de nossos clientes </div>
 
-  <div class="box-cantainer">
+  <div class="box-container">
     <div class="review-slider owl-carousel owl-theme">
 
       <div class="box item">
