--- a/index.html
+++ b/index.html
@@ -1365,19 +1365,51 @@
 </section>
 <!-- section review ends / seções de revisão termina -->
 
+<!-- offer section starts / seção de ofertas começa -->
+<section id="offer">
+  <div class="heading">Vantagens que tem na Avalone</div>
+  <div class="images">
+
+    <div class="box">
+      <img src="assets/images/service_1.gif" alt="">
+      <h3>Entrega Grátis</h3>
+    </div>
+
+    <div class="box">
+      <img src="assets/images/service_2.gif" alt="">
+      <h3>Pagamento na hora da entrega</h3>
+    </div>
+
+    <div class="box">
+      <img src="assets/images/service_3.gif" alt="">
+      <h3>Manipulação</h3>
+    </div>
+  </div>
+
+    <div class="deal">
+      <div class="image">
+        <img src="assets/images/deals-8.png" alt="">
+      </div>
+
+      <div class="content">
+        <h4>Inalador G-Tech / 3anos de Garantia</h4>
+        <p>Desconto de até 20% a vista</p> 
+        <div class="stars">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+        </div>
+        <div class="price">R$ 135,90 </div>
+        <a href="#"><button>adicionar ao carrinho</button> </a>
+      </div>
+    </div>
 
 
 
-
-
-
-
-
-
-
-
-
-
+</section>
+<!-- offer section ends / seção de ofertas termina -->
 
 
 
