--- a/index.html
+++ b/index.html
@@ -1411,6 +1411,24 @@
 </section>
 <!-- offer section ends / seção de ofertas termina -->
 
+<!-- brand section start / seção de marca começa-->
+
+<div id="brand">
+  <div class="brand-slider owl-carousel owl-theme">
+    <img src="assets/images/brands.png" alt="" class="item">
+    <img src="assets/images/brands-1.png" alt="" class="item">
+    <img src="assets/images/brands-2.png" alt="" class="item">
+    <img src="assets/images/brands-3.png" alt="" class="item">
+    <img src="assets/images/brands-4.png" alt="" class="item">
+    <img src="assets/images/brands-5.png" alt="" class="item">
+    <img src="assets/images/brands-6.png" alt="" class="item">
+    <img src="assets/images/brands-7.png" alt="" class="item">
+  </div>
+</div>
+
+<!-- brand section end / seção de marca termina-->
+
+
 
 
 
