--- a/index.html
+++ b/index.html
@@ -1428,6 +1428,18 @@
 
 <!-- brand section end / seção de marca termina-->
 
+<!-- newsletter section starts /começa a seção do boletim informativo -->
+
+  <section id="newsletter">
+    <h1>boletim informativo</h1>
+    <p>inscreva-se para atualizações mais recentes</p>
+    <input type="text" placeholder="se inscreva"><br>
+    <input type="submit" value="se inscreva">
+
+  </section>
+
+<!-- newsletter section ends / termina a seção do boletim informativo -->
+
 
 
 
