--- a/index.html
+++ b/index.html
@@ -1440,6 +1440,42 @@
 
 <!-- newsletter section ends / termina a seção do boletim informativo -->
 
+<!-- footer section starts / seção de rodapé começa -->
+<section id="footer" class="container-fluid">
+  <div class="row">
+    <div class="col-md-4 text-center brand-info">
+      <a href="#" class="logo"> <img src="assets/images/ico-andre.ico" alt=""><h1>Avalone</h1></a>
+      <p>A Farmácia Avallone trabalha em Tatuí a mais de 100 anos, contribuindo para o crescimento de nossa cidade, com um grande estoque em Medicamentos industrializados, e uma Perfumaria repleta de novidades além de um Laboratório de MANIPULAÇÃO pronto pra manipular seus medicamentos. </p>
+    </div>
+
+    <div class="col-md-3 text-center links">
+      <h3>links</h3>
+      <div class="nav-links">
+        <a href="#home">Inicio</a>
+        <a href="#product">Produtos</a>
+        <a href="#review">Testemunhos</a>
+        <a href="offer">Ofertas</a>
+        <a href="newsletter">newsletter</a>
+
+      </div>
+    </div>
+
+    <div class="col-md-3 text-center follow-us">
+      <h3>Siga-nos</h3>
+      <div class="follow-us-links">
+        <a href="#">Facebook</a>
+        <a href="#">Twitter</a>
+        <a href="#">Instagram</a>
+        <a href="#">Pinterest</a>
+      </div>
+    </div>
+  </div>
+  <div class="credit text-center">&copy;copyright @ 2022 a <span>Peterson Caetano</span></div>
+</section>
+      
+<!-- footer section ends / seção de rodapé termina -->
+
+
 
 
 
